# wyvern

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  LICENSE  README  README.md  mkdocs.yml  pyproject.toml  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: format-and-lint.yml
asuka/: __init__.py  assets.py  bot.py  builders.py  event_handler.py  exceptions.py  users.py  utils.py
asuka/builders/: __init__.py  base_objs.py  intents.py
asuka/events/: __init__.py  base_events.py  messages.py
asuka/gateway/: __init__.py  enums.py  events.py  gateway.py  keep_alive.py
asuka/models/: users.py
asuka/rest/: __init__.py  client.py
clyde/: __init__.py  bot.py  builders.py  users.py
clyde/events/: __init__.py  base_events.py  event_handler.py  messages.py
clyde/rest/: client.py
clyde/websocket/: __init__.py  enums.py  keep_alive.py  ws.py
docs/: api_reference.rst  conf.py  getting_started.md  index.md  index.rst  requirements.txt  urls.md
docs/_static/: style.css
docs/api_reference/: api.rst  client.md  clients.md  color.md  colors.md  colors.rst  events.md  events.rst  intents.md  models.rst  plugins.md  presences.md  rest.md  utils.md  utils.rst
docs/api_reference/api/: bot.md  bot.rst  event_decos.rst  event_handler.rst  intents.md  intents.rst  rest_client.rst
docs/api_reference/components/: base.md  buttons.md  container.md  modals.md  select_menus.md  selects.md
docs/api_reference/constructors/: embed.md  embeds.md
docs/api_reference/events/: lib_events.rst
docs/api_reference/extensions/: tasks.md
docs/api_reference/interactions/: applications.md  base.md  components.md  localizations.md
docs/api_reference/models/: base.md  components.rst  members.md  members.rst  message.md  messages.md  messages.rst  users.md  users.rst
docs/api_reference/state_handlers/: users.md
docs/commands/: client.md  command_handler.md  slash_commands.md
docs/examples/: basic_bot.md  custom_event_handler.md
docs/guide/: basic_bot.md
examples/: basic.py  basic_client.py  event_handler.py  slash_command.py
wyvern/: __init__.py  __main__.py  _internals.py  _types.py  aliases.py  assets.py  bot.py  client.py  clients.py  color.py  colors.py  events.py  exceptions.py  files.py  intents.py  logger.py  permissions.py  plugins.py  presences.py  types.py  utils.py  ux.py
wyvern/api/: __init__.py  bot.py  client.py  event_decos.py  event_handler.py  gateway.py  intents.py  rest_client.py
wyvern/api/enums/: __init__.py  ws_events.py
wyvern/builders/: __init__.py  components.py  embeds.py
wyvern/commands/: __init__.py  base.py  command_handler.py  context_menus.py  slash_commands.py
wyvern/components/: __init__.py  base.py  buttons.py  container.py  modals.py  selects.py
wyvern/constructors/: __init__.py  components.py  embed.py  embeds.py
wyvern/enums/: channels.py
wyvern/events/: __init__.py  base.py  base_events.py  lib_events.py  message.py
wyvern/extensions/: __init__.py  tasks.py
wyvern/gateway/: __init__.py  enums.py  gateway.py  keep_alive.py
wyvern/helpers/: __init__.py  event_handler.py  exceptions.py  intents.py
wyvern/interactions/: __init__.py  _converters.py  applications.py  base.py  components.py  converters.py  localizations.py
wyvern/internals/: enum_flags.py  gateway.py  rest.py
wyvern/models/: __init__.py  _converters.py  abc.py  base.py  channels.py  components.py  converters.py  emojis.py  guilds.py  members.py  message.py  messages.py  object.py  roles.py  snowflake.py  stickers.py  user.py  users.py  voices.py
wyvern/rest/: __init__.py  client.py  endpoints.py
wyvern/state_handlers/: __init__.py  members.py  users.py
wyvern/utils/: __init__.py  consts.py  hooks.py
(+3 files in other folders)
