[tool.poetry]
name = "Wyvern"
version = "0.0.1"
description = ""
authors = ["FallenDeity", "sarthhh"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
isort = "^5.10.1"
black = "^22.6.0"
pre-commit = "^2.20.0"
sphinx = "^5.2.3"
furo = "^2022.9.29"
myst-parser = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["wyvern"]  # TODO: Add setup.py, docs/conf.py

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
strict = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
install_types = true
