[tool.poetry]
name = "wyvern"
version = "0.0.2a"
description = "A flexible and easy to use Discord API wrapper for python 🚀."
authors = [ "sarthhh", "FallenDeity"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
attrs = "^22.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
isort = "^5.10.1"
black = "^22.6.0"
pre-commit = "^2.20.0"
pygments = "^2.13.0"
mkdocs = "^1.4.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.5.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["wyvern"]

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
strict = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
install_types = true
